# BromineCore

./: LICENSE  README.md  pyproject.toml
brcore/: __init__.py  core.py  util.py
brcore/enum/: __init__.py  channels.py  events.py  exception_texts.py  misskeytypes.py  websocketevent.py
tests/: __init__.py  test_argument.py
