[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "0.16"
name = "brominecore"
dependencies = [
    "websockets",
    "typing_extensions; python_version < '3.13'",
]
requires-python = ">= 3.9"
authors = [
    {name = "iodine53"},
]
maintainers = [
    {name = "iodine53"},
]
description = "Misskey websocketAPI wrapper."
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT License"}
keywords = ["misskey"]
classifiers = [
    "Development Status :: 4 - Beta",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/35enidoi/BromineCore"
Issues = "https://github.com/35enidoi/BromineCore/issues"
